--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -14,18 +14,19 @@ spec:
   params:
     - name: repo-url
     - name: branch
+    - name: build-image
       default: main
   tasks:
-    - name: tests
+    - name: build
       workspaces:
         - name: source
           workspace: pipeline-workspace
       taskRef:
-        name: nose
+        name: buildah
+        kind: ClusterTask
       params:
-      - name: database_uri
-        value: "sqlite:///test.db"
-      - name: args
-        value: "-v --with-spec --spec-color"
+      - name: IMAGE
+        value: "$(params.build-image)"
       runAfter:
-        - clone
+        - tests
+        - lint
